--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -1,9 +1,8 @@
 .home {
     display: flex;
+    background-color: rgb(78, 57, 97);
     flex-direction: column;
-    flex: 1;
-    font-size: 5rem;
-    justify-content: center;
-    color: blueviolet;
-    align-items: center
+    padding-top: 5rem;
+    padding-bottom: 4rem;
+
 }
