--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 .mainContainer {
   background-image: url("https://img.freepik.com/vector-gratis/fondo-mariposa-femenina-borde-rosa-ilustracion-animales-vectoriales_53876-144641.jpg?w=1380&t=st=1667966623~exp=1667967223~hmac=90b460499cc07a321699ddb5e256162b8291a69bf9222001bd87acdd130680d2");
+  background-size: cover;
 }
 
 .nav img:hover {
@@ -33,7 +34,6 @@
 .etiNav li{
   padding-right: .5rem;
   padding-left: 1rem;
-
   list-style:none
 }
 
@@ -77,16 +77,34 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+.containerDetail{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  margin: 205px;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  transition: all 200ms ease;
+}
+
 .buttomDetail {
   margin: 10px;
-  padding: 5px;
+  padding: 10px;
   background-color: rgb(245, 218, 245);
   border-radius: 7px;
   color: #212121;
+  text-decoration: none;
+  border: solid 2px black;
+  font-weight: bold;
 }
 
 .buttomDetail :hover{
   color: white;
+  background-color: #72011d;
 }
 
 .iconInfo{
@@ -103,23 +121,43 @@
   padding: 25px;
 }
 
+.card-model{
+  font-size: 45px;
+}
 .title {
   font-size: 22px;
   font-weight: bold;
   color:#212121
 }
-.list-container {
+.list-Container {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around
+  justify-content: center;
+
 }
 
-.card-cate {
+.card-price{
+  font-size: 35px;
+  text-align: center;
+  list-style: none;
+  color: #53075a;
+  
+}
+
+.card-info{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+
+.card-tecno {
   font-size: 24px;
   font-weight: bold;
   color: #212121;  
+  list-style: none;
 }
+
 .card-descr {
   display: flex;
   align-items: center;
@@ -127,10 +165,14 @@
   color: #212121;
   font-weight: bold;
   height: 8rem;
- 
 }
 
-
+.card-count{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+}
 .footerContainer{
   display: flex;
   justify-content: space-between;
