--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 .logoRE {
   width: 100px;
   margin: 10px;
-  
+
 }
 
 .mainContainer {
   background-image: url("https://img.freepik.com/vector-gratis/fondo-mariposa-femenina-borde-rosa-ilustracion-animales-vectoriales_53876-144641.jpg?w=1380&t=st=1667966623~exp=1667967223~hmac=90b460499cc07a321699ddb5e256162b8291a69bf9222001bd87acdd130680d2");
   background-size: cover;
+ 
 }
 
 .nav img:hover {
@@ -23,7 +24,7 @@
 }
 
 
-.etiNav{
+.etiNav {
   font-weight: bold;
   display: flex;
   align-items: center;
@@ -31,13 +32,13 @@
 
 }
 
-.etiNav li{
+.etiNav li {
   padding-right: .5rem;
   padding-left: 1rem;
-  list-style:none
+  list-style: none
 }
 
-.etiNav li a:hover{
+.etiNav li a:hover {
   color: #72011d;
   background-image: linear-gradient(to top, #a318c565, #ffffff9c, #bf4fdb6b);
   border-radius: 25px;
@@ -50,14 +51,14 @@
   color: #53075a;
   text-decoration: none;
   list-style: none;
-  
+
 }
 
 .iconCardWidget {
   font-size: 30px;
 }
 
-.container{
+.container {
   display: flex;
   flex-direction: column;
   width: 25rem;
@@ -77,7 +78,7 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.containerDetail{
+.containerDetail {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -102,12 +103,11 @@
   font-weight: bold;
 }
 
-.buttomDetail :hover{
-  color: white;
-  background-color: #72011d;
+.buttomDetail:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.iconInfo{
+.iconInfo {
   font-size: 17px;
 }
 
@@ -117,18 +117,20 @@
   height: 300px;
 }
 
-.card-image{
+.card-image {
   padding: 25px;
 }
 
-.card-model{
+.card-model {
   font-size: 45px;
 }
+
 .title {
   font-size: 22px;
   font-weight: bold;
-  color:#212121
+  color: #212121
 }
+
 .list-Container {
   display: flex;
   flex-wrap: wrap;
@@ -136,15 +138,15 @@
 
 }
 
-.card-price{
+.card-price {
   font-size: 35px;
   text-align: center;
   list-style: none;
   color: #53075a;
-  
+
 }
 
-.card-info{
+.card-info {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -154,7 +156,7 @@
 .card-tecno {
   font-size: 24px;
   font-weight: bold;
-  color: #212121;  
+  color: #212121;
   list-style: none;
 }
 
@@ -167,13 +169,14 @@
   height: 8rem;
 }
 
-.card-count{
+.card-count {
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: 20px;
 }
-.footerContainer{
+
+.footerContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -182,32 +185,160 @@
   box-shadow: 0px 3px 20px 5px #f390f3;
 }
 
-.titleFooter{
+.titleFooter {
   margin: 20px;
 
 }
-.footerIcon{
+
+.footerIcon {
   display: flex;
   font-size: 30px;
 
 
 }
-.instaIcon{
+
+.instaIcon {
   padding-right: 20px;
   color: #d84280;
 
 }
-.whatIcon{
+
+.whatIcon {
   padding-right: 20px;
   color: green;
 
 }
-.faceIcon{
+
+.faceIcon {
   padding-right: 20px;
   color: rgb(33, 33, 252);
 
 }
 
-.footerIcon :hover{
+.footerIcon :hover {
   color: white;
+  justify-content: center;
+  flex: 1;
+
+}
+
+.cartContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.cartImage {
+  width: 350px;
+  height: 250px;
+  border-radius: 15px;
+}
+
+.cartDesc {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  flex-direction: column;
+  font-weight: bold;
+  margin: 10px;
+  align-items: center;
+  font-size: 20px;
+  
+}
+
+.cart-lister {
+  display: flex;
+  justify-content: center;
+  margin: 30px;
+  width: 800px;
+  height: 400px;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.541);
+  border-radius: 40px;
+  padding: 10px;
+  border: solid 2px rgba(128, 128, 128, 0.452);
+}
+
+.cartModel{
+  font-size: 35px;
+}
+
+.cartPrice{
+  font-size: 25px;
+}
+
+.cartMainContainer{
+  display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.buttonEliminar{
+  background-color: #e96fa2;
+  color: #212121;
+  border-radius: solid 2px black;
+  border-radius: 30px;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.buttonEliminar:hover{
+  color: wheat;
+  box-shadow: 0px 3px 20px 5px #f390f3;
+}
+
+
+.seguiCompra {
+  color: #ffffff;
+  text-decoration: none;
+  margin-bottom: 10px;
+  font-weight: bold;
+  background-color: #6b2d70;
+  padding: 10px;
+  border-radius: 30px;
+}
+
+.seguiCompra:hover{
+  background-color: #da95df;
+  color: #212121;
+}
+
+
+.noProductsContainer{
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  height: 783px;
+}
+
+.noProducts{
+  font-weight: bold;
+  font-size: 40px;
+  color: #53075a;
+}
+
+.hacerCompra{
+  font-weight: bold;
+  font-size: 30px;
+  color: #3f033a;
+  text-decoration: none;
+  background-color: #f390f3;
+  border-radius: 20px;
+  padding: 20px;
+  border:solid 3px rgb(91, 2, 99);
+}
+
+.hacerCompra:hover{
+  background-color: #623166;
+  color: #da95df;
+}
+
+.containerSeguiComprando{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
