--- a/src/pages/home/styles.css
+++ b/src/pages/home/styles.css
@@ -1,8 +1,22 @@
 .home {
     display: flex;
-    background-color: rgb(78, 57, 97);
+    background-image: "https://img.freepik.com/vector-premium/estetica-montana-fondos-pantalla-imagen-fondo_584397-109.jpg?w=1380";
+    background-size: cover;
     flex-direction: column;
-    padding-top: 5rem;
-    padding-bottom: 4rem;
+    height: 81vh;   
+}
 
+.RocioE{
+    display: flex;
+    justify-content: center;
+    font-size: 150px;
+    font-family: 'Courier New', Courier, monospace;
+    padding-top: 200px;
+    transition: all 0.8s ease;
+
+}
+
+.home h1:focus{
+    background-color: #ebba50;
+    color: #161616;
 }
